--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="del">Del</string>
 
     <string name="div">\u00F7</string>
-    <string name="squr">n&#178;</string>
+    <string name="squr"> ^ </string>
     <string name="mult">\u00D7</string>
     <string name="plus">+</string>
     <string name="min">-</string>
